2008-12-23 Roman
- FIX:/UI/Vision: Visual scale unified and fixed.
- !:/UI/WebCfgD: The scroll offset added for absolute tag position calc.
- !!:/UI/WebCfgD: Command's fields is released.


2008-12-23 Maxim
- /UI/Vision: Visual scale manipulation support is added.

2008-12-22 Roman
- !:/SYS: Documentation pack is unified and separated to project info files and documentation. Dynamic librarie's links packing into main
    package and development is fixed.
- !:/SYS: Remove documentation default installation.
- !:/SYS: Change project's library revision to "0:10:0".
- !!:/UI/WebCfgD: Fields of images is released.


2008-12-19 Roman
- FIX:/UI: FontConfig enable call move to subsystem 'UI'.
- !!:/DAQ/System: Adapted to support libsensors version 3 API.
- FIX:/UI/QTCfg: Hosts list modify function fixed.
- !!:/UI/WebCfgD: Base fields support realisation is finished.
- FIX:/UI/WebCfgD: Some fixes is made.


2008-12-17 Roman
- /UI/QTCfg: Some codes is clear and algoritms is optimized.
- !:/UI/WebCfgD: Realised support of Text area and combobox.


2008-12-16 Roman
- /UI/QTCfg: Some algoritms is optimized.
- FIX:/UI/WebCfgD: Statusbar access is fixed.
- FIX:/UI/WebCfgD,/UI/WebVision: Call to options of 'select' is made through option[].
- !:/UI/WebCfgD: Delete item action is released. Copy, Cut and Paste actions is released.


2008-12-15 Roman
- !!!!:/UI: Dynamic Web based configurator module (UI.WebCfgD) is added. Not all function yet reailed!
- !!:/UI: UI subsystem's module template is added (src/moduls/ui/=Tmpl=).
- !!:/UI/WebDbg: Remove module.
- !!:/UI/WebVision: JavaScript module's code exuded to separate file WebVisionVCA.js.
- !!:/UI/WebWision: Using fontconfig for TTF fonts location is added. Now into primitive "Diagram" used TTF fonts.
- FIX:/UI/WebWision: Multiple loading page's tree is fixed.
- /UI/WebWision: Check access to widget's support is added.
- /UI/WebWision: Open popup windows support is added.