@@ -1,3 +1,7 @@
+2008-12-26 Maxim
+- FIX:/UI/Vision: Widths scaling for the primitive ElFigure for runtime mode is fixed.
+
+
 2008-12-23 Roman
 - FIX:/UI/Vision: Visual scale unified and fixed.
 - !:/UI/WebCfgD: The scroll offset added for absolute tag position calc.
